--- a/contact.html
+++ b/contact.html
@@ -9,6 +9,15 @@
 
 </head>
 <body>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="index.html">Accueil</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+
     <section id="contact">
         <h2>Contact</h2>
 
